[package]
name = "test-req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
futures = "0.3.30"
jupiter-swap-api-client = "0.1.0"
reqwest = { version ="0.12.4", features = ["json"] }
serde_json = "1.0.117"
solana-client = "1.18.13"
solana-sdk = "1.18.13"
tokio = { version = "1", features = ["full"] }
